--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/aws"]
 	path = vendor/aws
-	url = https://github.com/aws/aws-sdk-php.git
+	url = https://github.com/hsiri/aws-sdk-php.git
